--- a/lections/lection_13_BOM_DOM/materials/index.html
+++ b/lections/lection_13_BOM_DOM/materials/index.html
@@ -17,8 +17,31 @@
     <span id="f2" class="example"></span> -->
 
 
-    <div class="block">block text 1</div>
+    <!-- <div class="block">block text 1</div>
     <div class="block">block text 2</div>
-    <div id="block" class="block">id block 3</div>
+    <div id="block" class="block">id block 3</div> -->
+
+
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
+    <div class="block-item"></div>
 </body>
 </html>
