--- a/lections/lection_14_DOM_events/materials/index.html
+++ b/lections/lection_14_DOM_events/materials/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div class="block" style="background-color: aliceblue;">
-    Hello</div>
+    <div class="block" style="background-color: aliceblue;"></div>
 </body>
 </html>
