--- a/lections/lection_15_DOM_events/materials/index.html
+++ b/lections/lection_15_DOM_events/materials/index.html
@@ -9,8 +9,8 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    <div class="block" data-foo="bar" data-value="200">
-        Hello <span id="special">World</span>
+    <div class="container">
+
     </div>
 
     <style>
@@ -19,5 +19,6 @@
             border: 2px solid black;
         }
     </style>
+
 </body>
 </html>
