--- a/lections/lection_17_Storage-practice/materials/index.html
+++ b/lections/lection_17_Storage-practice/materials/index.html
@@ -12,6 +12,27 @@
 
 <body>
 
+
+    <div class="block">
+        <span></span>
+        <button class="click">Click</button>
+    </div>
+
+    <div class="block">
+            <span></span>
+            <button class="click">Click</button>
+        </div>
+
+    <div class="block">
+        <span></span>
+        <button class="click">Click</button>
+    </div>
+
+    <div class="block">
+        <span></span>
+        <button class="click">Click</button>
+    </div>
+
 </body>
 
 </html>
